# komodoenv

./: .flake8  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check_update.yml  python-app.yml  style.yml  testing.yml  typing.yml
komodoenv/: __init__.py  __main__.py  _site.py  actions.py  context.py  creator.py  komodo.py  main.py  python.py  release.py  statfs.py  update.py
komodoenv/bundle/: __init__.py  pip-20.1.1-py2.py3-none-any.whl  setuptools-47.3.1-py3-none-any.whl  wheel-0.34.2-py2.py3-none-any.whl
komodoenv/scripts/: install_extra.py
komodoenv/versions/: __init__.py  _site.py  base_creator.py  bash_enable.in  cpython27.py  cpython36.py
src/komodoenv/: __main__.py  colors.py  creator.py  python.py  statfs.py  update.py
tests/: conftest.py  test_actions.py  test_autodetect.py  test_context.py  test_cp27.py  test_creator.py  test_integration.py  test_main.py  test_python.py  test_statfs.py  test_update.py
tests/scripts/: test_install_extra.py
tests/version/: data.py  test_cpython27.py  test_factory.py
