[build-system]
requires = ["setuptools>=30.3.0", "wheel", "setuptools_scm", "pip"]

[tool.ruff]
src = ["komodoenv"]
line-length = 88
[tool.ruff.lint]
select = [
  "W",   # pycodestyle
  "I",   # isort
  "B",   # flake-8-bugbear
  "SIM", # flake-8-simplify
  "F",   # pyflakes
  "UP",  # pyupgrades
  "C4",  # flake8-comprehensions
  "PL",
]

ignore = ["PLW2901", # redefined-loop-name
          "PLR2004", # magic-value-comparison
          "PLR0915", # too-many-statements
          "PLR0912", # too-many-branches
          "PLR5501", # collapsible-else-if
          "PLR0911",  # too-many-return-statements
]

[tool.ruff.lint.pylint]
max-args = 20