[build-system]
requires = ["setuptools>=65", "setuptools_scm", "pip>=24"]
build-backend = "setuptools.build_meta"

[project]
name = "komodoenv"
authors = [
    { name = "Equinor ASA", email = "fg_sib-scout@equinor.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
license = { text = "GPL-3.0" }
dependencies = [
  "distro", 
  "PyYAML"
]

[tool.setuptools]
packages = ["komodoenv", "komodoenv.bundle"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
komodoenv = ["bundle/*.whl"]

[tool.setuptools_scm]
write_to = "src/komodoenv/_version.py"

[project.scripts]
komodoenv = "komodoenv.__main__:main"

[tool.ruff]
src = ["src"]
line-length = 88
[tool.ruff.lint]
select = [
  "ALL"
]

ignore = [
          "PLR2004",  # magic-value-comparison
          "D",  # pydocstyle
          "E501",  # line-too-long
          "PTH123",  # builtin-open
          "T201",  # print statements
          "S603",  # `subprocess` call: check for execution of untrusted input
          "S607",  # Starting a process with a partial executable path
          "EXE001",  # Shebang is present but file is not executable
          "RET505",  # superfluous-else-return
          "PERF203",  # `try`-`except` within a loop incurs performance overhead
          "ANN",  # flake8-annotations
          "ISC001",  # single-line-implicit-string-concatenation (conflict ruff formatter)
          "COM812",  # missing-trailing-comma (conflict ruff formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108", "ANN", "PT006", "PLC0415"]
"src/komodoenv/update.py" = ["FA102", "FA100", "UP"]

[tool.ruff.lint.pylint]
max-args = 10
